<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio_bridge</name>
  <version>0.0.0</version>
  <description>Visual Inertial Odometry bridge node</description>
  <maintainer email="taehun-kmu@kookmin.ac.kr">orin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_catch2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
